Deployment/shipments/webapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipments-webapp
  namespace: commerceflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipments-webapp
  template:
    metadata:
      labels:
        app: shipments-webapp
    spec:
      containers:
        - name: shipments-webapp
          image: lucasfogliarini/shipments-webapp:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "0.4"
              memory: "0.5Gi"
            limits:
              cpu: "0.8"
              memory: "1Gi"
