Deployment/shipments/webapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shipments-webapp
  namespace: commerceflow
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: route.pulse
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shipments-webapp
                port:
                  number: 80
